--- a/stayle.css
+++ b/stayle.css
@@ -64,4 +64,16 @@ label:hover{
     opacity: 0.8;
 
 }
+@media only screen and (max-width: 600px) {
+    #paymentalert {
+        font-size: 16px;
+    }
 
+    #submitButton {
+        font-size: 14px;
+    }
+
+    #paymentresult {
+        font-size: 14px;
+    }
+}
